APCuを使用したSSEを実装

--- a/src/button.html
+++ b/src/button.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="events.php" method="get">
-        <button type="submit" name="on">ON</button>
+    <form action="index.php" method="get">
+        <button type="submit" name="page">ON</button>
     </form>
 </body>
 </html>
