--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-        function myFunction() {
-            const es = new EventSource('./events.php');
-            es.addEventListener('message', e => {
-                const { time, word } = JSON.parse(e.data);
-                // sample.appendChild(document.createElement('li')).textContent = `${time} ${word}`;
-                sample.innerHTML = `<li>${time} ${word}</li>`;
-            });
-        }
-        // document.addEventListener('DOMContentLoaded', e => 
-        // document.addEventListener('phalcon-message', e => {
-            // const es = new EventSource('./events.php');
-            // es.addEventListener('message', e => {
-            //     const { time, word } = JSON.parse(e.data);
-            //     // sample.appendChild(document.createElement('li')).textContent = `${time} ${word}`;
-            //     sample.innerHTML = `<li>${time} ${word}</li>`;
-            // });
-        // });
-    </script>
+   <meta charset="UTF-8">
+   <title>Server-sent events demo</title>
 </head>
 <body>
-    <button onclick="myFunction()">開始</button>
-    <ul id="sample"></ul>
+  <button>Close the connection</button>
+
+  <ul>
+  </ul>
+
+<script>
+  var button = document.querySelector('button');
+  var evtSource = new EventSource('sse.php');
+  console.log(evtSource.withCredentials);
+  console.log(evtSource.readyState);
+  console.log(evtSource.url);
+  var eventList = document.querySelector('ul');
+
+  evtSource.onopen = function() {
+    console.log("Connection to server opened.");
+  };
+
+  evtSource.onmessage = function(e) {
+    var newElement = document.createElement("li");
+
+    newElement.textContent = "message: " + e.data;
+    eventList.appendChild(newElement);
+  };
+
+  evtSource.onerror = function() {
+    console.log("EventSource failed.");
+  };
+
+  button.onclick = function() {
+    console.log('Connection closed');
+    evtSource.close();
+  };
+
+  // evtSource.addEventListener("ping", function(e) {
+  //   var newElement = document.createElement("li");
+  //
+  //   var obj = JSON.parse(e.data);
+  //   newElement.innerHTML = "ping at " + obj.time;
+  //   eventList.appendChild(newElement);
+  // }, false);
+</script>
 </body>
 </html>
